Fixes #196: RFC descriptions cleanup. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@404 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -606,7 +606,11 @@ please_contact_sysadmin_for_more_information = Please contact the System Adminis
 
 please_contact_sysadmin_questions = Please contact the System Administrator if you have questions.
 
+please_correct_the_duplicate_description_found_in_row = Please correct the duplicate description found in row
+
 please_correct_the_duplicate_name_found_in_row = Please correct the duplicate name found in row
+
+please_correct_the_duplicate_text_found_in_row = Please correct the duplicate text found in row
 
 please_write_down_the_password_and_provide = \ Please write down the password and provide it directly to the user.
 
