--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1645,6 +1645,8 @@ re-populated = re-populated
 
 reason_for_change = Reason for Change
 
+reason_for_change_descriptions = Reason For Change Descriptions
+
 reassign = Reassign
 
 reassign_subject = Reassign Subject
@@ -1947,6 +1949,8 @@ sign_subject = Sign Subject
 
 site = Site
 
+site_level = Site-Level
+
 site_name = Site Name
 
 sites = Sites
@@ -2033,6 +2037,8 @@ study_group = Study Group
 study_group_and_associated_subjects = Study Groups and Associated Subjects (if any)
 
 study_groups = Study Groups
+
+study_level = Study-Level
 
 study_name = Study Name
 
@@ -2495,6 +2501,8 @@ view_this_subject_record = View this Subject's Record
 view_user_account = View User Account
 
 view_user_log_for = View User Log for
+
+visibility = Visibility
 
 visit = Visit#
 
