Fixes #415: Activate/deactivate Set Role button depending on # of studies or sites. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@408 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3126,3 +3126,6 @@ schedule_date = Schedule Date
 user_email_date = User Email Date
 is_reference_event = is Reference Event
 reference_visit_for_event = Reference Visit for Event
+
+# ticket 415
+all_available_roles = You already applied all available roles
