Fixes #405: Option to prevent CRF to be SDV-ed if open queries exist. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@415 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2993,6 +2993,8 @@ startDateTimeLabel=Start Date/Time Label:
 
 markImportedCRFAsCompleted=Mark imported CRF as Completed?
 
+allowSdvWithOpenQueries=Allow SDV with open queries?
+
 days_after_it_was_last_used = days after it was last used
 
 subjectForm=Subject Form
