Fixes #431: Email text is not consistent with email sender. Submitted by vitaly.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@438 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -188,9 +188,9 @@ email_body_8 = Message:
 
 email_body_9 = Please select the link below to view the information provided. You may need to login to
 
-email_footer = <P>This e-mail may contain privileged and confidential information. It is intended only for the use of the individual or entity to which it is addressed. If you are not the intended recipient, you are not authorized to read, retain, copy, print, distribute or use this message. If you have received this communication in error, please notify the sender and delete all copies of this message. We do not accept any liability for virus infected mails.</P>
+email_footer = This e-mail may contain privileged and confidential information. It is intended only for the use of the individual or entity to which it is addressed. If you are not the intended recipient, you are not authorized to read, retain, copy, print, distribute or use this message. If you have received this communication in error, please notify the sender and delete all copies of this message. We do not accept any liability for virus infected mails.
 
-email_header_1 = You received this email from
+email_header_1 = You received this email
 
 email_header_2 = regarding
 
