Fixes #32: Data import shouldn't replace data automatically when the data already exists. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@440 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/audit_events.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/audit_events.properties
@@ -209,3 +209,4 @@ eventcrf_sdv_status=EventCRF SDV Status
 study_event_restored=Study Event restored
 study_event_deleted=Study Event deleted
 study_event_source_data_verified=Study Event source data verified
+item_data_skipped=Item data value skipped
