--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1234,3 +1234,6 @@ warning=Warning:
 warning_message=This CRF Item exists across different groups in removed CRF version(s):
 best_system_administrator = Best,<br><br>System Administrator for {0}
 
+site = Site
+study = Study
+import_job_msg = was not configured to replace existing data during import. Several items were skipped. You can find them in the audit log.
