--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1524,6 +1524,8 @@ order_of_dynamic_groups = Order of Dynamic Groups
 
 original = original
 
+other = Other
+
 other_related_information = Other<br>Related<br>Information
 
 other_studies_if_any = Other studies if any
@@ -1720,6 +1722,8 @@ repeat_max = Repeat Max
 repeat_number = Repeat Number
 
 repeated_key = Repeat Key {0}
+
+will_be_skipped = will be skipped
 
 repeating = Repeating
 
@@ -2995,6 +2999,8 @@ markImportedCRFAsCompleted=Mark imported CRF as Completed?
 
 allowSdvWithOpenQueries=Allow SDV with open queries?
 
+replaceExisitingDataDuringImport=Replace exisiting data during import?
+
 days_after_it_was_last_used = days after it was last used
 
 subjectForm=Subject Form
@@ -3131,3 +3137,6 @@ reference_visit_for_event = Reference Visit for Event
 
 # ticket 415
 all_available_roles = You already applied all available roles
+
+import_msg_part1 = Current
+import_msg_part2 = was not configured to replace existing data during import. Several items will be skipped.
