--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -987,6 +987,8 @@ your_crf_version_oid_did_not_generate = Your CRF Version OID {0} did not generat
 
 your_crf_version_oid_for_study_event_oid = Your CRF Version OID {0} for Study Event OID {1} does not reference a proper CRF Version in that Study Event.
 
+you_already_have_started_other_crf_version_for_study_event_and_subject = You already have started another crf version for study event ''{0}'' and study subject ''{1}''.
+
 your_current_study_is_not_the_same_as = Your current study is not the same as the Study {0}, for which you are trying to enter data. Please log out of your current study and into the study for which the data is keyed.
 
 your_email_address_not_found_try_again = Your email address could not be found in our database. Please try again or contact the Administrative Contact.
