--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1239,3 +1239,4 @@ best_system_administrator = Best,<br><br>System Administrator for {0}
 site = Site
 study = Study
 import_job_msg = was not configured to replace existing data during import. Several items were skipped. You can find them in the audit log.
+was_skipped = was skipped
