Fixes spelling mistake in the properties file
git-svn-id: https://svn.clinovo.com/clincapture/trunk@472 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2999,7 +2999,7 @@ markImportedCRFAsCompleted=Mark imported CRF as Completed?
 
 allowSdvWithOpenQueries=Allow SDV with open queries?
 
-replaceExisitingDataDuringImport=Replace exisiting data during import?
+replaceExisitingDataDuringImport=Replace existing data during import?
 
 days_after_it_was_last_used = days after it was last used
 
