--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -985,6 +985,8 @@ you_not_have_permission_upload_file = You do not have permission to uploading a 
 
 your_crf_version_oid_did_not_generate = Your CRF Version OID {0} did not generate any results in the database. Please check it and try again.
 
+your_study_event_oid_is_not_scheduled = Your Study Event OID {0} is not scheduled.
+
 your_crf_version_oid_for_study_event_oid = Your CRF Version OID {0} for Study Event OID {1} does not reference a proper CRF Version in that Study Event.
 
 you_already_have_started_other_crf_version_for_study_event_and_subject = You already have started another crf version for study event ''{0}'' and study subject ''{1}''.
