Fixes #480: Problems with Data Import when incorrect number of items are in an Item Group. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@507 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1244,3 +1244,6 @@ site = Site
 study = Study
 import_job_msg = was not configured to replace existing data during import. Several items were skipped. You can find them in the audit log.
 was_skipped = was skipped
+
+# ticket #480
+we_have_found_a_diplicate = We have found a duplicate in the XML for the Item OID {0}.  Please remove the extra Item Data from your XML.
