Fixes #502: N&Ds related to Calendared Events cannot be closed or Updated. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@535 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1247,3 +1247,5 @@ was_skipped = was skipped
 
 # ticket #480
 we_have_found_a_diplicate = We have found a duplicate in the XML for the Item OID {0}.  Please remove the extra Item Data from your XML.
+
+subject_id_not_found = Subject's id not found
