Fixes #495: Text change in error message so as not to name the wrong button. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@556 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2884,7 +2884,7 @@ view_rules_assignment_filter=(click to filter by CRF)
 
 view_executed_rules_target_oid= Target OID
 view_executed_rules_affected_subjects = The rule actions below will be executed for the affected subjects indicated. Click Submit to execute.
-view_executed_rules_no_affected_subjects = No subjects meet the criteria for the selected rule(s). Click 'Cancel' to go back.
+view_executed_rules_no_affected_subjects = No subjects meet the criteria for the selected rule(s). Click 'Back' to go back.
 view_executed_rules_oid= OID
 
 view_rule_assignment_target= Target
