Fixes #471: If rules are skipping already entered data, the summary numbers need to reflect that. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@557 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3140,3 +3140,11 @@ all_available_roles = You already applied all available roles
 
 import_msg_part1 = Current
 import_msg_part2 = was not configured to replace existing data during import. Several items will be skipped.
+
+import_summary_subjects_affected = Subjects: {0} affected
+import_summary_events_affected = Events: {0} affected
+import_summary_item_affected = Items: {0} affected
+
+import_summary_subjects_out_of_affected = Subjects: {0} out of {1} affected
+import_summary_events_out_of_affected = Events: {0} out of {1} affected
+import_summary_item_out_of_affected = Items: {0} out of {1} affected
