Fixes #517: Generate Unit Tests for the ImportSummaryInfo object. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@561 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2852,3 +2852,11 @@ pwd_reqs_change_required=User is required to change password (after first login)
 pwd_reqs_expiration_days=Password expiration time (in days):
 pwd_reqs_expiration_days_note=(Password expiration will not be verified if set to zero or less. Changes in this configuration are applied after a server restart.)
 pwd_reqs_server_restart=(Changes in this configuration are applied after a server restart.)
+
+import_summary_subjects_affected = Subjects: {0} affected
+import_summary_events_affected = Events: {0} affected
+import_summary_item_affected = Items: {0} affected
+
+import_summary_subjects_out_of_affected = Subjects: {0} out of {1} affected
+import_summary_events_out_of_affected = Events: {0} out of {1} affected
+import_summary_item_out_of_affected = Items: {0} out of {1} affected
