Fixes #447: Show the correct discrepancy note on email-action rules when email settings are incorrect. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@582 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -399,3 +399,5 @@ dayemail_less_or_equal_dayschedule = Day Email should be less than or equal to D
 
 # Ticket 130
 dataset_should_not_contain_any_special = The Dataset Name should not contain any special symbols, only spaces, letters and numbers.
+
+email_action_processor_exception = The system was supposed to send an email alert, but your server's connection to email does not work. Please contact your System Administrator for more details.
