Fixes #479: Issue with Import Data and Partial Dates + other Date Formats. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@584 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -953,6 +953,8 @@ you_choose_to_show_subject_attributes = You choose to show Subject Attributes:
 
 you_have_a_date_value_which_is_not = You have a date value which is not in ISO 8601 format at the OID {0}. Please check it and try again.
 
+you_have_a_pdate_value_which_is_not = You have a partial date value which is not in ISO 8601 format at the OID {0}. Please check it and try again.
+
 you_have_selected = You have selected  a total of
 
 you_may_enter_study_subject_ID_listed = \ or you may simply enter the Study Subject ID listed below.
