--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3140,6 +3140,20 @@ all_available_roles = You already applied all available roles
 
 import_msg_part1 = Current
 import_msg_part2 = was not configured to replace existing data during import. Several items will be skipped.
+code = Code
+medical_coding=Medical Coding
+
+# coded item description
+preferred_name = Preferred Name
+id = ID
+full_id = Full id
+xmr = XMR
+ro = RO
+rq = RQ
+sematic_type = Semantic Type
+smq_level = SMQ Level
+tui = TUI
+umls_cui = UMLS CUI
 
 import_summary_subjects_affected = Subjects: {0} affected
 import_summary_events_affected = Events: {0} affected
