--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -106,6 +106,8 @@ input_not_partial_date = The input does not match your partial date format
 
 input_not_valid_date = The input you provided is not a valid date in\t
 
+input_not_valid_pdate = The input you provided is not a valid partial date in\t
+
 input_not_valid_date_time = The input you provided is not a valid date/time in\t
 
 input_not_valid_email = The input you provided is not a valid email address in\t
