Fixes #548: Rework System Admin role to root-only, while splitting out Admin type vs role. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@612 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -218,6 +218,8 @@ study_director = study director
 
 study_administrator = study administrator
 
+administrator = administrator
+
 clinical_research_coordinator = clinical research coordinator
 
 less_than = less than
