--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1621,8 +1621,6 @@ removed = Removed
 
 repeat = Repeat
 
-Repeated_events = Repeated events
-
 repeat_as_necessary = Repeat<br> As<br> Necessary
 
 repeat_max = Repeat Max
@@ -2060,6 +2058,8 @@ sure_to_sign_subject1 = "As the investigator or designated member of the investi
 sure_to_sign_subject2 = (The exact date and time will be recorded by the system upon submission of the signature form.)
 
 system_administrator = System Administrator
+
+administrator = Administrator
 
 tab = TAB
 
