--- a/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -217,6 +217,8 @@ study_director = study director
 
 study_administrator = study administrator
 
+administrator = administrator
+
 clinical_research_coordinator = clinical research coordinator
 
 less_than = less than
@@ -364,7 +366,7 @@ New_and_Updated = New and Updated
 
 source_data_verified = source data verified
 deleted = deleted
-removed = removed
+
 unlock=unlock
 
 # ClinCapture #86 "Not Closed" DN's status
