--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -306,8 +306,6 @@ as = as
 
 ascending_sort = ascending sort
 
-assign_users = Assign Users
-
 assign_users_to_current_study = Assign Study-Level User(s) to Study:
 
 assign_users_to_current_site = Assign Site-Level User(s) to Site:
@@ -1713,8 +1711,6 @@ removed = Removed
 
 repeat = Repeat
 
-Repeated_events = Repeated events
-
 repeat_as_necessary = Repeat<br> As<br> Necessary
 
 repeat_max = Repeat Max
@@ -2170,6 +2166,8 @@ sure_to_sign_subject1 = "As the investigator or designated member of the investi
 sure_to_sign_subject2 = (The exact date and time will be recorded by the system upon submission of the signature form.)
 
 system_administrator = System Administrator
+
+administrator = Administrator
 
 tab = TAB
 
@@ -3008,8 +3006,6 @@ studyEventForm=Study Event Form
 
 studyShoudBeInAvailableMode=The Study's status needs to be 'Available' in order to enter data!
 
-subjectEventSigned=Signed
-
 # added clinovo #121
 Please_Select_One = Please Select One
 reassign_crf_version = Reassign CRF to a New Version
@@ -3107,7 +3103,6 @@ day_schedule = Day Schedule
 day_max = Day Max
 day_min = Day Min
 day_email = Day Email
-user_name = User Name
 reference_visit_already_exist = A Reference visit already exists
 after_the_reference_visit = Number of days this event will be automatically scheduled after the last reference event completes.
 the_maximum_day_that_an_event = Maximum days that this event can be completed after the last reference event is completed. Completing this event  later generates an automatic query.
