Fixes #424: Coding verification should be performed under coding role. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@626 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/terms.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/terms.properties
@@ -57,6 +57,7 @@ Study_Administrator = Study Administrator
 Investigator = Investigator
 
 Clinical_Research_Coordinator = Clinical Research Coordinator
+study_coder = Study Coder
 
 MSK = MSK
 
