--- a/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -57,6 +57,7 @@ Study_Administrator = Study Administrator
 Investigator = Investigator
 
 Clinical_Research_Coordinator = Clinical Research Coordinator
+study_coder = Study Coder
 
 MSK = MSK
 
