Fixes #573: Allow for study wide medical coding dictionary configuration in study parameters. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@637 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3158,3 +3158,4 @@ import_summary_subjects_out_of_affected = Subjects: {0} out of {1} affected
 import_summary_events_out_of_affected = Events: {0} out of {1} affected
 import_summary_item_out_of_affected = Items: {0} out of {1} affected
 allowCodingVerification = Allow medical coding verification
+defaultMedicalCodingDictionary = Default Dictionary
