Fixes #531: Add proper protection to Delete CRF Version URL (and others). Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@677 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -412,7 +412,9 @@ no_CRF_assigned_pick_another = There are no CRFs assigned to this Study. Please 
 
 no_CRF_selected_for_definition_add_later = No CRF is selected for this Definition this time, you may add CRFs later.
 
-no_action_specified = No action specified.
+no_action_specified = No value specified for request parameter 'action'.
+
+invalid_http_request_parameters = Invalid request parameters.
 
 no_crf_available_study_is_a_site = No CRFs are available to you as you are currently logged into a Site. Please change to a Study in order to see the CRF Library
 
