Fixes #630: ND panel inside CRF header should be always visible if there are NDs. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@679 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2578,6 +2578,7 @@ crf_notes = Discrepancy Notes
 open = New
 updated = Updated
 closed = Closed
+annotations = Annotations
 
 password_required = Password Required
 download_discrepancy_notes = Download discrepancy notes for all events (filtered for status or type)
