--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3161,3 +3161,5 @@ import_summary_item_out_of_affected = Items: {0} out of {1} affected
 allowCodingVerification = Allow medical coding verification
 defaultMedicalCodingDictionary = Default Dictionary
 dictionary=Dictionary
+
+message_for_not_scheduled_event_if_study_is_not_available=To schedule this event the current Study's status needs to be 'Available'.
