Fixes #665: Add the IDE completed icon on the subject matrix page. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@683 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -448,6 +448,8 @@ common = Common
 
 completed = Completed
 
+ideCompleted = Initial Data Entry Completed
+
 completed_items = Completed Items
 
 completion_date = Completion Date
