Fixes #554: Display the correct insttructions in the create datasets pages workflow. Submitted by sergey.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@690 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/config/languages/en/notes_en.properties
+++ b/web/src/main/config/languages/en/notes_en.properties
@@ -238,7 +238,7 @@ select_data_elements_and_continue = Select Data Elements and Continue
 select_event_start_end_however = Select the event start and end dates below. To specify data from the beginning of the year, you may leave the month field blank. However, if you specify a month, you must also specify the year.
 select_events_CRF_items_apply_dataset = Select the Study Events,CRFs, and Items for each event that you would like to apply to the dataset.
 select_filters_to_apply = Please select one or more filters you would like to apply to this dataset.
-select_items_in_CRF_include_dataset = , then select one or more items in a CRF that you would like to include to this dataset. You may select all items in the study by going to the "View Selected Items" (hyperlink) page and clicking "Select All".
+select_items_in_CRF_include_dataset = , then select one or more items in a CRF that you would like to include to this dataset. You may select all items in the study by going to the "View Selected Items" (hyperlink) page and clicking "Select All Items in Study".
 select_subject_view_more_details = Select any subject to view more details and to add or review subject data.
 select_to_manage = (select to manage or view all)
 sent_you_the_following_message_br = sent you the following message.
