--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -553,7 +553,7 @@ select_events_CRF_items_apply_dataset = Select the Study Events,CRFs, and Items 
 
 select_filters_to_apply = Please select one or more filters you would like to apply to this dataset.
 
-select_items_in_CRF_include_dataset = , then select one or more items in a CRF that you would like to include to this dataset. You may select all items in the study by going to the "View Selected Items" (hyperlink) page and clicking "Select All".
+select_items_in_CRF_include_dataset = , then select one or more items in a CRF that you would like to include to this dataset. You may select all items in the study by going to the "View Selected Items" (hyperlink) page and clicking "Select All Items in Study".
 
 select_subject_view_more_details = Select any subject to view more details and to add or review subject data.
 
