Fixes #652: The custom dictionary name should be specified in the study parameters. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@695 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3163,5 +3163,7 @@ import_summary_item_out_of_affected = Items: {0} out of {1} affected
 allowCodingVerification = Allow medical coding verification
 defaultMedicalCodingDictionary = Default Dictionary
 dictionary=Dictionary
+mc_dictionaries=Medical Coding Dictionaries
+autoCodeDictionaryName=Auto-code Dictionary Name
 
 message_for_not_scheduled_event_if_study_is_not_available=To schedule this event the current Study's status needs to be 'Available'.
