Refs #554: Add extra information on the instructions pages during dataset creation. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@704 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -90,7 +90,7 @@ choosing_switch_to_study = You are choosing to switch to the study
 
 clear_search_keywords = Clear Search Keywords
 
-click_event_subject_attributes_specify = You may also click Event Attributes/Subject Attributes to specify which event/subject attribute will be shown in the dataset.
+click_event_subject_attributes_specify = You may also click Event Attributes/Subject Attributes to specify which event/subject attribute will be included in the dataset.
 
 click_for_more_options = Click for more options
 
@@ -519,7 +519,7 @@ save_and_add_next_subject = Save and Add Next Subject
 
 save_and_assign_study_event = Save and Assign Study Event
 
-save_and_export_desired_format = Save and Export it to the desired format.
+save_and_export_desired_format = Save and export it to the desired format.
 
 save_and_finish = Save and Finish
 
@@ -537,7 +537,7 @@ select_CRFs_to_define_study_event = Please select the CRF(s) you would like to m
 
 select_a_filter_to_apply = Please select a filter you would like to apply to this data set. You can do this by simply selecting the
 
-select_all_items_inclusion_clicking = You may select all items in the study for inclusion by clicking the "Select All Items in Study" box . Be aware that if your study is complex by doing so you may be selecting hundreds or thousands of data elements for inclusion in your dataset. You may also deselect individual items by unchecking the box and clicking one of the buttons below.
+select_all_items_inclusion_clicking = You may select all items in the study by clicking the "Select All Items in Study" button below. Be aware that if your study is complex by doing so you may be selecting hundreds or thousands of data elements for inclusion in your dataset. You may also deselect individual items by unchecking the box and clicking one of the buttons below.
 
 select_cancel_upload_button = If you wish to cancel this upload, please select the Cancel Upload button.
 
@@ -567,7 +567,7 @@ sent_you_the_following_message_br = sent you the following message.
 
 should_be_able_to_add_subject = You should be able to add a subject w/o adding a study event.
 
-show_items_this_dataset = Show the following items in this dataset:
+show_items_this_dataset = Include the following items in this dataset:
 
 shown = shown
 
@@ -587,7 +587,9 @@ specify_filtering_choosing_filters = Specify filtering criteria by choosing from
 
 specify_metadata_for_the_dataset = Specify metadata for the Dataset.
 
-specify_study_longitudinal_scope = Specify the study's longitudinal scope.
+specify_study_longitudinal_scope = Specify the study's temporal scope.
+
+specify_study_temporal_scope = Specify the study's <b>temporal</b> scope.
 
 steps_to_extract_or_filter_dataset = The steps that you will need to take in order to Extract Full or Filtered Datasets are as follows:
 
