Fixes #660: VAL - On the “Sign Study Event for Subject” page, the field “Date/Time” is empty. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@710 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/format.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/format.properties
@@ -59,6 +59,15 @@ date_regexp = [0-9]{4}[\\-\\.][A-Za-z]{3}[\\-\\.][0-9]{1,2}
 date_time_format = DD-MMM-YYYY HH:MM
 
 #########################################
+# date_time_format_short
+#########################################
+# The 'date_time_format_short' property is used in the text of a date/time
+# field, to instruct the user which format to submit date/time fields.
+# Years may not be 2 digits in the application.
+#########################################
+date_time_format_short = dd-MMM-YYYY HH:MM
+
+#########################################
 # date_time_format_string
 #########################################
 # The 'date_time_format_string' property is used to generate date/time
