Fixes #621: VAL - Whitespace issues with Restore Password email. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@712 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/terms.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/terms.properties
@@ -34,6 +34,8 @@ Family/Pedigree = Family/Pedigree
 
 Favorite_Pet = Favorite Pet
 
+Favorite_Animal = Favorite Animal
+
 Guest = Guest
 
 INT = INT
