--- a/core/src/main/java/org/akaza/openclinica/i18n/terms_en.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/terms_en.properties
@@ -48,6 +48,7 @@ equal_to = equal to
 Failed_Validation_Check = Failed Validation Check
 Family/Pedigree = Family/Pedigree
 Favorite_Pet = Favorite Pet
+Favorite_Animal = Favorite Animal
 file = file
 floating = floating
 frozen = frozen
