--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -34,6 +34,8 @@ Family/Pedigree = Family/Pedigree
 
 Favorite_Pet = Favorite Pet
 
+Favorite_Animal = Favorite Animal
+
 Guest = Guest
 
 INT = INT
