Fixes #561: Study Frozen State does not allow to close N&Ds. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@716 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -139,6 +139,8 @@ crf_version_unarchived_successfully = The CRF version has been unarchived.
 
 crf_version_unlocked_successfully = The CRF Version is unlocked successfully.
 
+import_study_frozen = The site or study for this import job is Frozen, and cannot import data.
+
 current_study_frozen = The site or study you are logged into is Frozen.
 
 current_study_locked = The site or study you are logged into is Locked.
@@ -1008,6 +1010,8 @@ your_item_group_oid_for_form_oid = Your Item Group OID {0} for Form OID {1} does
 your_item_oid_for_item_group_oid = Your Item OID {0} for Item Group OID {1} does not reference a proper Item in the Item Group.
 
 your_job_ran_success_html = <br/>Your job ran successfully with the following messages returned.
+
+your_job_ran_html = <br/>Your job ran with the following messages returned.
 
 your_listed_crf_in_the_file = Your listed Event CRF in the file {0} does not exist, or has already been locked for import.
 
