Fixes #703: Problems with Manage CRF vs Admin CRF page. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@731 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1500,7 +1500,7 @@ openclinica_enterprise = ClinCapture Enterprise
 
 openclinica_feedback = Support
 
-openclinica_home = Openclinica Home
+openclinica_home = ClinCapture Home
 
 openclinica_portal = ClinCapture Portal
 
@@ -1729,7 +1729,7 @@ replace = Replace
 
 request_an_account = Request an Account
 
-request_an_openclinica_user_account = Request an Openclinica user account
+request_an_openclinica_user_account = Request an ClinCapture user account
 
 request_password_form = Request Password Form
 
