--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -325,9 +325,9 @@ import_instructions = Upload an xml file that contains CRF data.  If your CRF ha
 # Import Rule data
 import_rule_instructions = Upload an xml file that contains Rule data.
 
-import_rule_side_bar_instructions = Batch upload Rule data to ClinCapture using an XML file. Upon successful validation of the data provided in the xml file, Openclinica will save this information.
+import_rule_side_bar_instructions = Batch upload Rule data to ClinCapture using an XML file. Upon successful validation of the data provided in the xml file, ClinCapture will save this information.
 
-import_side_bar_instructions = Batch upload CRF data to ClinCapture using an XML file. Upon successful validation of the data provided in the xml file, Openclinica will save this information.
+import_side_bar_instructions = Batch upload CRF data to ClinCapture using an XML file. Upon successful validation of the data provided in the xml file, ClinCapture will save this information.
 
 in_order_to_enter_data_create_e = In order to enter data create event
 
