Fixes #610: VAL - Differences in Assign User and Admin User pages. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@749 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -799,6 +799,8 @@ the_study_subject_ID_used_by_another_in_study_site = The Study Subject ID has be
 
 the_study_user_role_deleted = The study user role has been deleted.
 
+the_study_user_role_removed = The study user role has been removed.
+
 the_study_user_role_restored = The study user role has been restored.
 
 the_user_role_deleted = The user role has been deleted.
