Fixes #611: Update audit log when coding/recoding occurs. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@767 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/audit_events.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/audit_events.properties
@@ -210,3 +210,5 @@ study_event_restored=Study Event restored
 study_event_deleted=Study Event deleted
 study_event_source_data_verified=Study Event source data verified
 item_data_skipped=Item data value skipped
+
+medical_coding = Medical Coding
