Fixes #694: Add coding approval parameter to study config. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@786 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/words.properties
@@ -2994,3 +2994,4 @@ pwd_reqs_expiration_days=Password expiration time (in days):
 pwd_reqs_expiration_days_note=(Password expiration will not be verified if set to zero or less. Changes in this configuration are applied after a server restart.)
 pwd_reqs_server_restart=(Changes in this configuration are applied after a server restart.)
 autoCodeDictionaryName=Auto-code Dictionary Name
+medicalCodingApprovalNeeded=Medical Coding Approval Needed
