Fixes #751: Empty Pop-up for Study Event on Subject Matrix. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@837 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -757,6 +757,8 @@ the_event = The Event\u0009
 
 the_event_CRF = The Event CRF\u0009
 
+the_event_cannot_be_deleted_as_there_are_discrepancy_notes_attached = The event {0} cannot be deleted from the subject record for {1} in the study {2}, as there are discrepancy notes attached to the event.
+
 the_event_crf_not_correct_status = The Event CRF you are trying to update does not have the correct status.
 
 the_excel_is_not_available_on_server_contact = The excel spreadsheet is not available on the server, please contact your admin for help.
