Fixes #798: ClinCapture must send an email on Delete/Remove/Restore User Role actions. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@841 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3114,7 +3114,7 @@ day_min = Day Min
 day_email = Day Email
 reference_visit_already_exist = A Reference visit already exists
 after_the_reference_visit = Number of days this event will be automatically scheduled after the last reference event completes.
-the_maximum_day_that_an_event = Maximum days that this event can be completed after the last reference event is completed. Completing this event  later generates an automatic query.
+the_maximum_day_that_an_event = Maximum days that this event can be completed after the last reference event is completed. Completing this event  later generates an automatic query.	
 the_minimum_day_that_an_event = Minimum days that this event can be completed after the last reference event completes. Completing this event earlier generates an automatic query.
 the_day_a_reminder_email_is = Number of days a reminder email is sent out after the last reference visit is completed.
 use_only_a_valid_user_name = Use only a valid user name in this field
@@ -3130,6 +3130,13 @@ day_email_message_htm = Dear {0},<br><br>This is a reminder to complete the Cale
 view_calendared_parameters = View calendared parameters for subject
 calendared_events = Calendared Events
 reference = Reference
+# ticket 798
+notification_deleting_role = Notification of deleting user role
+notification_removing_role = Notification of removing user role
+notification_restoring_role = Notification of restoring user role
+delete_role_email_message_htm = Dear {0},<br>(user name: {1})<br><br>You have been deleted from the Study/Site {2} with role {3}. You will no longer have access to the Study.<br><br>Best,<br>Administrator for {2}.
+remove_role_email_message_htm = Dear {0},<br>(user name: {1})<br><br>You have been removed from the Study/Site {2} with role {3}. You will no longer have access to the Study.<br><br>Best,<br>Administrator for {2}.
+restore_role_email_message_htm = Dear {0},<br>(user name: {1})<br><br>You have been restored to the Study/Site {2} with role {3}. You are now able to access to the Study.<br><br>Best,<br>Administrator for {2}.
 # ticket 324
 current_date = Current Date
 calendared_event_name = Calendared Event Name
