Fixes #683: Improve the workflow on the extract datasets page. Submit by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@848 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -223,6 +223,8 @@ expression_invalid_at = The expression is invalid at
 
 expression_not_start_with_func_at = The expression does not start with 'func' at
 
+extract_is_running = Your extract is running. You will receive an email and message when the extract is complete.
+
 fields_for_event_all_required = The fields for event are all required. Please choose 'Add New Study Event' from Menu and try to add events again.
 
 file_uploading_failed_please_check_logs_and_upload_again = File uploading failed. Please check logs and upload again.
