--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -726,6 +726,8 @@ data_type = Data Type
 
 dataset = Dataset
 
+dataset_details = Dataset Details
+
 dataset_description = Dataset Description
 
 dataset_filters_applied = Dataset Filters Applied
@@ -1015,6 +1017,12 @@ expected_enrollment = Expected Enrollment
 expected_total_enrollment = Expected total enrollment
 
 export_this_dataset = Export This Dataset
+
+extract_data = Extract Data
+
+extract_formats = Extract Formats
+
+extracted_files = Extracted Files
 
 facility_ZIP = Facility ZIP
 
@@ -3059,7 +3067,7 @@ update_import_job = Update Import Job
 error_message_cannot_update_crf_version=Cannot update CRF version for the Subject.
 create_an_import_job = Create an Import Job
 login_lockout = Login Lockout
-datasets_for = Datasets for
+datasets_for = Manage Datasets for
 view_subject_record2 = View Subject's Record
 sign_casebook = Sign Casebook
 sign_study_event_for_subject = Sign Study Event for Subject
